# Kite-GC

./: .gitattributes  .gitignore  CLAUDE.md  README.md  justfile  mkdocs.yml  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  ARDUPILOT_IMPORT_PLAN.md  BUILD.md  CHANGELOG.md  COLORED_TRACK_PLAN.md  DATA_PIPELINE.md  DEVLOG.md  FLIGHTLOG_DATABASE.md  M5_TEST_CHECKLIST.md  MISSION_MULTIAUTOPILOT_PLAN.md  PROTOCOL_FLIGHT_MODES.md  QUICK_NOTES.md  RC_LINUX_HANDOFF_TEMP.md  ROADMAP.md  requirements.txt
docs/active/: AIRSPACE_MANAGER.md  ARDUPILOT_COMMAND_COVERAGE.md  ARDUPILOT_MISSION_LIBRARY.md  ARDUPILOT_WAYPOINT_ARCHITECTURE.md  AUTOLAND_SAFEHOME.md  DATA_PIPELINE.md  FLIGHTLOG_DATABASE.md  FLIGHT_MODE_UNIFIED.md  GEOFENCE.md  GEOZONES.md  LIVE_RECORDING_TEMP_STORE.md  MAVLINK_RC_CONTROL.md  MISSION_LIBRARY_AND_DB.md  MISSION_MULTIAUTOPILOT_PLAN.md  MISSION_TRACKING_AND_PROVENANCE.md  MULTI_BATTERY.md  Map3DRework.md  PANEL_FRAMEWORK.md  PROTOCOL_FLIGHT_MODES.md  PROTOCOL_REFACTORING.md  RADAR_ALERTS.md  RADAR_FORMATION_FLIGHT.md  RADAR_TRACKING_CORE.md  RADAR_TRACKING_PANEL_AND_MAP.md  RADIO_TELEMETRY.md  RC_CONTROL.md  RF_LINK_ANALYSIS.md  RTSP_VIDEO.md  STICK_OVERLAY.md  TELEMETRY_FORWARDING.md  TerrainFeatures.md  USER_DOCS_ARCHITECTURE.md  VEHICLE_CONTROL.md  VEHICLE_DB.md  VideoFeature.md
docs/archive/: ARDUPILOT_MISSION_LIBRARY.md  AUTOLAND_SAFEHOME.md  BATTERY_MANAGEMENT.md  COLORED_TRACK_PLAN.md  FLIGHT_MODE_UNIFIED.md  GEOFENCE.md  GEOZONES.md  LIVE_RECORDING_TEMP_STORE.md  M5_TEST_CHECKLIST.md  MAVLINK_RC_CONTROL.md  MISSION_LIBRARY_AND_DB.md  MISSION_LIBRARY_UI.md  MISSION_MULTIAUTOPILOT_PLAN.md  MISSION_TRACKING_AND_PROVENANCE.md  MSP_RC_CONTROL.md  MULTI_BATTERY.md  Map3DRework.md  PANEL_FRAMEWORK.md  PROTOCOL_REFACTORING.md  PatternGenerator.md  RADAR_ALERTS.md  RADAR_FORMATION_FLIGHT.md  RADAR_TRACKING_CORE.md  RADAR_TRACKING_PANEL_AND_MAP.md  RADIO_TELEMETRY.md  README.md  RTSP_VIDEO.md  STICK_OVERLAY.md  TELEMETRY_FORWARDING.md  TerrainFeatures.md  UI_SCALING.md  USER_DOCS_ARCHITECTURE.md  VEHICLE_CONTROL.md  VEHICLE_DB.md  VideoFeature.md  WIND_CRAB_INDICATOR.md
docs/dev/: AI-ASSIST-RULES.md  ARCHITECTURE.md  ARDUPILOT_IMPORT_PLAN.md  ARDUPILOT_WAYPOINT_ARCHITECTURE.md  BATTERY_MANAGEMENT.md  BLE_LINUX_NATIVE_IMPL.md  BUILD.md  CHANGELOG.md  COLORED_TRACK_PLAN.md  DEVLOG.md  FLIGHTLOG_DATABASE.md  MISSION_LIBRARY_AND_DB.md  MISSION_LIBRARY_UI.md  MISSION_MULTIAUTOPILOT_PLAN.md  MISSION_TRACKING_AND_PROVENANCE.md  Map3DRework.md  PANEL_FRAMEWORK.md  PatternGenerator.md  README.md  ROADMAP.md  TerrainFeatures.md  UI_SCALING.md  VideoFeature.md  WaypointDisable.md
docs/dev/archive/: ARDUPILOT_IMPORT_PLAN.md  BATTERY_MANAGEMENT.md  README.md
docs/dev/reference/: data-pipeline.md  flightlog-database.md
docs/future/: EXTERNAL_API.md  MULTI_OPERATOR_CENTRAL_ARCHIVE.md  RADIO_SOURCE_RADAR.md  README.md  UAV_GEOZONES_NFZ.md  VEHICLE_DATABASE.md  WIND_CRAB_INDICATOR.md  WaypointDisable.md
docs/reference/: DATA_PIPELINE.md  README.md
docs/user/: changelog.md  index.md
docs/user/for-developers/: architecture.md  building.md  contributing.md  index.md  ui-framework.md
docs/user/getting-started/: first-connection.md  installation.md  quick-tour.md
docs/user/guides/: airspace.md  (+14 more)
overrides/: main.html
scripts/: build-linux.sh  build-windows.bat  build-windows.ps1  collect-release.ps1  collect-release.sh  dev.bat  dev.sh  gen-uav-arrow.mjs  gen-uav-plane.mjs  gen-uav-quad.mjs  gen-uav-tricopter.mjs  gen-uav-vtol.mjs
src/: app.html  globals.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_mode.rs  lib.rs  link_stats.rs  main.rs  state.rs
src-tauri/src/aero/: mod.rs  openaip.rs
src-tauri/src/commands/: aero.rs  connection.rs  control.rs  fc_settings.rs  fence.rs  flightlog.rs  geozone.rs  hid.rs  info.rs  logging.rs  mission.rs  mod.rs  radar.rs  rally.rs  rc.rs  safehome.rs  system.rs  terrain.rs  update_check.rs  video.rs
src-tauri/src/flightlog/: ardupilot.rs  blackbox.rs  db.rs  decoder.rs  exchange.rs  geocode.rs  mod.rs  msp_raw_logger.rs  raw_import.rs  raw_logger.rs  recorder.rs  timezone.rs  tlog_logger.rs  track_export.rs  types.rs  weather.rs
src-tauri/src/flightmode/: mod.rs
src-tauri/src/hid/: linux.rs  mod.rs  profiles.rs  windows.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/mavlink_proto/: codec.rs  control.rs  debug.rs  handler.rs  handshake.rs  mission.rs  mod.rs  params.rs  params_rt.rs  parser.rs  streamrates.rs
src-tauri/src/mission/: codec.rs  mod.rs  store.rs  types.rs
src-tauri/src/msp/: codec.rs  features.rs  mod.rs  parser.rs  rc_encode.rs  transport.rs  types.rs
src-tauri/src/passive_telemetry/: capture.rs  detector.rs  handler.rs  mod.rs  msp_probe.rs
src-tauri/src/passive_telemetry/decoders/: ap_passthrough.rs  crsf.rs  frsky.rs  ltm.rs  mod.rs
src-tauri/src/radar/: mod.rs  source.rs  vehicle.rs
src-tauri/src/radar/sources/: adsb_mavlink.rs  adsb_msp.rs  adsb_online.rs  formation_flight.rs  mod.rs  sim.rs
src-tauri/src/scheduler/: debug.rs  mod.rs  rc_tx.rs  telemetry.rs
src-tauri/src/telemetry_forward/: cache.rs  mod.rs  relay.rs
src-tauri/src/telemetry_forward/encoders/: crsf.rs  ltm.rs  mavlink.rs  mod.rs  smartport.rs
src-tauri/src/telemetry_forward/output/: ble.rs  mod.rs  serial.rs  tcp.rs  udp.rs
src-tauri/src/terrain/: mod.rs
src-tauri/src/transport/: ble.rs  ble_bluer.rs  mod.rs  serial.rs  tcp.rs  udp.rs
src-tauri/src/video/: ffmpeg.rs  go2rtc.rs  mod.rs  rtsp.rs
src-tauri/windows/: hooks.nsh
src/lib/: buildInfo.ts  index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/models/: README.md  uav-arrow.glb  uav-plane.glb  uav-quad.glb  uav-tricopter.glb  uav-vtol.glb
(+230 files in other folders)
