[package]
name = "kite-gc"
version = "0.8.0"
description = "Kite Ground Control — Universal Ground Control Station"
authors = ["you"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kite_gc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Full tokio runtime for async integration tests (#[tokio::test]); not in the release build
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serialport = "4"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"  # IANA zone + date → UTC offset (DST-aware) for flight-local time display (ADR-048)
tzf-rs = "0.4"     # coordinates → IANA timezone name (embedded boundary data) for log imports (ADR-048)
csv = "1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
btleplug = "0.11"
uuid = { version = "1", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["time", "sync", "macros"] }
futures = "0.3"
mavlink = { version = "0.17", default-features = false, features = ["std", "ardupilotmega", "emit-extensions"] }
num-traits = "0.2"  # FromPrimitive for lossless MavCmd/MavFrame <-> int (mission codec round-trip)
tiff = "0.9"  # decode Copernicus GLO-30 GeoTIFF DEM tiles (Float32, DEFLATE, predictor 3)

