[package]
name = "kite-gc"
# NOT the app version source — bump only package.json. The app/bundle version comes from
# package.json via tauri.conf.json (`"version": "../package.json"`); this is crate metadata only.
version = "0.8.0"
description = "Kite Ground Control — Universal Ground Control Station"
authors = ["you"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kite_gc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
# Full tokio runtime for async integration tests (#[tokio::test]); not in the release build
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serialport = "4"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"  # IANA zone + date → UTC offset (DST-aware) for flight-local time display (ADR-048)
tzf-rs = "0.4"     # coordinates → IANA timezone name (embedded boundary data) for log imports (ADR-048)
csv = "1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
btleplug = "0.11"
uuid = { version = "1", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["time", "sync", "macros"] }
futures = "0.3"
mavlink = { version = "0.17", default-features = false, features = ["std", "ardupilotmega", "emit-extensions"] }
num-traits = "0.2"  # FromPrimitive for lossless MavCmd/MavFrame <-> int (mission codec round-trip)
tiff = "0.9"  # decode Copernicus GLO-30 GeoTIFF DEM tiles (Float32, DEFLATE, predictor 3)

# HID / joystick input for GCS RC control (docs/archive/MSP_RC_CONTROL.md). Native per-OS backends read
# RAW axes/buttons/hats (no gamepad projection) so flight hardware / RC transmitters map correctly:
#   Windows → Windows.Gaming.Input RawGameController (the `windows` crate is already pulled by btleplug;
#             we just add the Gaming_Input features). Linux → evdev (pure Rust, no libevdev).
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = ["Gaming_Input", "Foundation_Collections"]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

